@@ -1,12 +1,12 @@
 package fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.controllers;
 
 import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.dtos.DateSondageDto;
+import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.exception.DateSondageAlreadyExistsException;
 import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.models.DateSondage;
 import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.services.DateSondageService;
 import jakarta.persistence.NoResultException;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
@@ -14,7 +14,6 @@ import org.springframework.web.server.ResponseStatusException;
 import java.util.Date;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(value = "/api/datesondage")
@@ -34,21 +33,19 @@ public class DateSondageController {
      */
     @PostMapping(value = "/{id}")
     @ResponseStatus(HttpStatus.CREATED)
-    @ResponseBody
-    public DateSondageDto createDate(@PathVariable("id") Long id, @RequestBody DateSondageDto dto) {
-        if(dto.getDate() == null || dto.getDate().before(new Date())) throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Vérifier la date");
+    public DateSondageDto create(@PathVariable("id") Long id, @RequestBody DateSondageDto dto) {
+        if(dto.getDate() == null || dto.getDate().before(new Date()))
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Précisez une date valide.");
         try{
+            service.checkIfDateAlreadyExists(id, dto);
             var model = mapper.map(dto, DateSondage.class);
             var result = service.create(id, model);
             return mapper.map(result, DateSondageDto.class);
-        } catch(DataIntegrityViolationException e){
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Il existe déjà une date correspondante à ce sondage ou bien, le sondage n'existe pas");
-        }
-        catch(NoSuchElementException e){
+        } catch(DateSondageAlreadyExistsException | NoSuchElementException e){
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage());
         }
         catch (Exception e) {
-            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la création du commentaire");
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la création de la date.");
         }
     }
 
@@ -59,23 +56,21 @@ public class DateSondageController {
      */
     @GetMapping(value = "/{id}")
     @ResponseStatus(HttpStatus.OK)
-    @ResponseBody
-    public List<DateSondageDto> getDates(@PathVariable("id") Long id) {
+    public List<DateSondageDto> getAllDatesBySondageId(@PathVariable("id") Long id) {
         try {
             var models = service.getBySondageId(id);
-            if (models.isEmpty()) throw new NoResultException();
             return models.stream()
                     .map(model -> mapper.map(model, DateSondageDto.class))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         catch(NoSuchElementException e){
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage());
         }
         catch(NoResultException e) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Aucune date de sondage n'a été trouvée");
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, e.getMessage());
         }
         catch (Exception e) {
-            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la création du commentaire");
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la récupération des dates.");
         }
     }
 
@@ -84,7 +79,7 @@ public class DateSondageController {
      * @param id
      */
     @DeleteMapping(value = "/{id}")
-    @ResponseStatus(HttpStatus.OK)
+    @ResponseStatus(HttpStatus.NO_CONTENT)
     public void delete(@PathVariable("id") Long id) {
         try {
             service.delete(id);
@@ -93,7 +88,7 @@ public class DateSondageController {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage());
         }
         catch (Exception e) {
-            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la création du commentaire");
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la suppression de la date.");
         }
     }
 }
