@@ -1,16 +1,10 @@
 package fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.controllers;
 
-import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.dtos.CommentaireDto;
-import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.dtos.DateSondageDto;
 import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.dtos.SondageDto;
-import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.models.Commentaire;
-import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.models.DateSondage;
 import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.models.Sondage;
-import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.services.CommentaireService;
-import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.services.DateSondageService;
 import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.services.DateSondeeService;
 import fr.univ.lorraine.ufr.mim.m2.gi.mysurvey.services.SondageService;
-import jakarta.servlet.http.HttpServletResponse;
+import jakarta.persistence.NoResultException;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -19,7 +13,7 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.NoSuchElementException;
 
 @RestController
 @RequestMapping(value = "/api/sondage")
@@ -29,147 +23,157 @@ public class SondageController {
     private SondageService service;
 
     @Autowired
-    private CommentaireService scommentaire;
-
-    @Autowired
-    private DateSondageService sdate;
-
-    @Autowired
     private DateSondeeService request;
 
     @Autowired
     private ModelMapper mapper;
 
-    public SondageController(SondageService service, ModelMapper mapper, CommentaireService c, DateSondageService d, DateSondeeService r) {
-        this.service = service;
-        this.mapper = mapper;
-        this.sdate = d;
-        this.scommentaire = c;
-        this.request = r;
+    /**
+     * Create a sondage
+     * @param sondageDto sondage
+     * @return sondage
+     */
+    @PostMapping(value = "/")
+    @ResponseStatus(HttpStatus.CREATED)
+    public SondageDto create(@RequestBody SondageDto sondageDto) {
+        if(sondageDto.getFin().before(new Date()))
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "La date de fin doit être supérieure à la date de début.");
+        if(sondageDto.getCreateBy() == null)
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Le sondage doit avoir un créateur.");
+        if(sondageDto.getNom() == null)
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Le sondage doit avoir un nom.");
+        if(sondageDto.getDescription() == null)
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Le sondage doit avoir une description.");
+        if(sondageDto.getCloture() == null || sondageDto.getCloture())
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Le sondage doit être ouvert.");
+        try {
+            var model = mapper.map(sondageDto, Sondage.class);
+            var result = service.create(sondageDto.getCreateBy(), model);
+            return mapper.map(result, SondageDto.class);
+        }
+        catch (Exception e) {
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la création du sondage.");
+        }
     }
 
     /**
      * Get ALl sondages
-     * Verifier
-     * @return
+     * @return List de sondage
      */
     @GetMapping(value = "/")
     @ResponseStatus(HttpStatus.OK)
-    @ResponseBody
-    public List<SondageDto> get() {
-        var models = service.getAll();
-
-        return models.stream()
-                .map(model -> mapper.map(model, SondageDto.class))
-                .collect(Collectors.toList());
+    public List<SondageDto> getAllSondages() {
+        try {
+            var models = service.getAll();
+            return models.stream().map(model -> mapper.map(model, SondageDto.class)).toList();
+        }
+        catch(NoResultException e) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, e.getMessage());
+        }
+        catch(Exception e) {
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la récupération des sondages.");
+        }
     }
 
     /**
      * Get sondage by id
-     * Verified
-     * @param id
-     * @return
+     * @param id sondage
+     * @return sondage
      */
     @GetMapping(value = "/{id}")
     @ResponseStatus(HttpStatus.OK)
-    @ResponseBody
-    public SondageDto get(@PathVariable("id") Long id) {
+    public SondageDto getSondageById(@PathVariable("id") Long id) {
         try{
             var model = service.getById(id);
             return mapper.map(model, SondageDto.class);
-        } catch (Exception e) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Sondage non trouvé", null);
+        }
+        catch(NoResultException e) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, e.getMessage());
+        }
+        catch (Exception e) {
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la récupération du sondage.");
         }
     }
 
     /**
      * Get Meilleur date d'un sondage
-     * Verifier
-     * @param id
-     * @return
+     * @param id sondage
+     * @return List des meilleures dates
      */
     @GetMapping(value = "/{id}/best")
     @ResponseStatus(HttpStatus.OK)
-    @ResponseBody
-    public List<Date> getBest(@PathVariable("id") Long id) {
+    public List<Date> getBestDateBySondageId(@PathVariable("id") Long id) {
         try {
-            return request.bestDate(id);
-        }catch (Exception e) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Sondage non trouvé", null);
+            return request.getBestDateBySondageId(id);
+        }
+        catch(NoSuchElementException e) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage());
+        }
+        catch (Exception e) {
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la récupération du sondage.");
         }
     }
 
     /**
      * Get Possible meilleur date d'un sondage
-     * Verifier
-     * @param id
-     * @return
+     * @param id sondage
+     * @return Liste des potentielles meilleures dates
      */
     @GetMapping(value = "/{id}/maybe")
     @ResponseStatus(HttpStatus.OK)
-    @ResponseBody
-    public List<Date> getMaybeBest(@PathVariable("id") Long id) {
+    public List<Date> getMaybeBestBySondageId(@PathVariable("id") Long id) {
         try {
-            return request.maybeBestDate(id);
-        }catch (Exception e) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Sondage non trouvé", null);
+            return request.getMaybeBestDateBySondageId(id);
+        }
+        catch(NoSuchElementException e) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage());
+        }
+        catch (Exception e) {
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la récupération du sondage.");
         }
     }
 
     /**
-     * Create a sondage
-     * Vérifier
-     * @param sondageDto
-     * @return
-     */
-    @PostMapping(value = "/")
-    @ResponseStatus(HttpStatus.CREATED)
-    @ResponseBody
-    public SondageDto create(@RequestBody SondageDto sondageDto) {
-        verifySondage(sondageDto);
-        var model = mapper.map(sondageDto, Sondage.class);
-        var result = service.create(sondageDto.getCreateBy(), model);
-        return mapper.map(result, SondageDto.class);
-    }
-
-    private void verifySondage(@RequestBody SondageDto sondageDto) {
-        if(sondageDto.getFin().before(new Date())) throw new ResponseStatusException(HttpStatus.BAD_REQUEST,"La date de fin doit être supérieure à la date de début",null);
-        if(sondageDto.getCreateBy() == null) throw new ResponseStatusException(HttpStatus.BAD_REQUEST,"Le sondage doit avoir un créateur",null);
-        if(sondageDto.getNom() == null) throw new ResponseStatusException(HttpStatus.BAD_REQUEST,"Le sondage doit avoir un nom",null);
-        if(sondageDto.getDescription() == null) throw new ResponseStatusException(HttpStatus.BAD_REQUEST,"Le sondage doit avoir une description",null);
-        if(sondageDto.getCloture() == null || sondageDto.getCloture()) throw new ResponseStatusException(HttpStatus.BAD_REQUEST,"Le sondage doit être ouvert",null);
-
-    }
-
-    /**
      * Update a sondage
-     * Verifier
-     * @param id
-     * @param sondageDto
-     * @return
+     * @param id id du sondage
+     * @param sondageDto sondageDto
+     * @return SondageDto
      */
     @PutMapping(value = "/{id}")
     @ResponseStatus(HttpStatus.OK)
     public SondageDto update(@PathVariable("id") Long id, @RequestBody SondageDto sondageDto) {
-        verifySondage(sondageDto);
-        Sondage model;
+        if(sondageDto.getFin() != null && sondageDto.getFin().before(new Date()))
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "La date de fin doit être supérieure à la date de début.");
         try {
-            model = mapper.map(sondageDto, Sondage.class);
+            if (service.getById(id).equals(mapper.map(sondageDto, Sondage.class)))
+                throw new ResponseStatusException(HttpStatus.NO_CONTENT, "Le sondage n'a pas été modifié.");
+            Sondage model = mapper.map(sondageDto, Sondage.class);
             var result = service.update(id, model);
             return mapper.map(result, SondageDto.class);
-        } catch (Exception e) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Sondage non trouvé", null);
+        }
+        catch(NoSuchElementException e){
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, e.getMessage());
+        }
+        catch (Exception e) {
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la mise à jour du sondage.");
         }
     }
 
     /**
      * Delete a sondage
-     * Verifier
-     * @param id
+     * @param id du sondage
      */
     @DeleteMapping(value = "/{id}")
-    @ResponseStatus(HttpStatus.OK)
+    @ResponseStatus(HttpStatus.NO_CONTENT)
     public void delete(@PathVariable("id") Long id) {
-        service.delete(id);
+        try {
+            service.delete(id);
+        }
+        catch(NoSuchElementException e) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, e.getMessage());
+        }
+        catch (Exception e) {
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur lors de la suppression du sondage.");
+        }
     }
 }
